--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="flex flex-col p-8 min-h-screen w-full justify-between items-center text-red bg-slate-200 select-none">
-    <div class="grid grid-rows-2 grid-cols-3 gap-8">
+    <div class="grid lg:grid-rows-2 lg:grid-cols-3 gap-8">
       <div class="rounded-xl w-64 h-64 bg-red-500">
         <img class="w-64 h-64 rounded-xl w-full h-full" src="https://images.unsplash.com/photo-1524704654690-b56c05c78a00?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1169&q=80" alt="Fish">
       </div>
